fixxing background color flickering

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -10,11 +10,11 @@
   overflow: visible;
   z-index: 99998;
   backdrop-filter: blur(60px);
-  position: fixed;
   max-width: 2500px;
   div > img {
-    object-fit: contain;
-    
+    object-fit: cover;
+    max-width: 100%;
+    height: auto;  
   }
 }
 .text {
