--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,6 @@ $SecondaryText: #1A1A1A;
 a {
   text-decoration: none;
   color: unset;
-  background-color: white;
 }
 
 h1, h2, h3 , h4, h5{
